--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,8 +2,6 @@ file.reference.byte-buddy-1.8.15.jar=selenium-java-3.141.59/libs/byte-buddy-1.8.
 file.reference.client-combined-3.141.59.jar=selenium-java-3.141.59/client-combined-3.141.59.jar
 file.reference.commons-exec-1.3.jar=selenium-java-3.141.59/libs/commons-exec-1.3.jar
 file.reference.guava-25.0-jre.jar=selenium-java-3.141.59/libs/guava-25.0-jre.jar
-#Sun May 03 16:02:10 BST 2020
-file.reference.junit-4.13-rc-1.jar=library/junit-4.13-rc-1.jar
 file.reference.mysql-connector-java-8.0.18.jar=library/mysql-connector-java-8.0.18.jar
 file.reference.okhttp-3.11.0.jar=selenium-java-3.141.59/libs/okhttp-3.11.0.jar
 file.reference.okio-1.14.0.jar=selenium-java-3.141.59/libs/okio-1.14.0.jar
@@ -68,7 +66,6 @@ javac.classpath=\
     ${file.reference.byte-buddy-agent-1.10.5.jar}:\
     ${file.reference.jBCrypt-0.4.1.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.junit-4.13-rc-1.jar}:\
     ${file.reference.mockito-core-3.2.4.jar}:\
     ${file.reference.objenesis-2.6.jar}:\
     ${file.reference.byte-buddy-1.8.15.jar}:\
@@ -108,8 +105,8 @@ javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${libs.junit_4.classpath}
 src.dir=${source.root}/java
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${build.classes.dir}\:${javac.classpath}
